classDiagram
    direction TB

    %% ==========================================
    %% Core Interfaces (Ports)
    %% ==========================================
    class MessagePublisher {
        <<interface>>
        +publish(msg: Message) void
        +close() void
    }

    class MessageSubscriber {
        <<interface>>
        +subscribe(topic: String, callback: Consumer~Message~) void
        +unsubscribe(topic: String) void
    }

    class TrafficService {
        <<interface>>
        +getAllRoads() List~Road~
        +getRoad(id: String) Road
        +getSegment(id: String) RoadSegment
        +getVehicles() List~Vehicle~
    }

    class VehicleNavigationPort {
        <<interface>>
        +registerVehicle(vehicle: Vehicle) void
        +setRoute(vehicleId: String, route: Route) void
    }

    %% ==========================================
    %% Domain Entities & Use Cases
    %% ==========================================
    class Vehicle {
        +TOPIC_BASE: String
        +id: String
        +characterization: Characterization
        #smartTrafficPublisher: MessagePublisher
        #smartTrafficSubscriber: MessageSubscriber
        +updateLocation(newLoc: RoadLocation) void
        +reportAccident(segment: String, kp: double) void
        #handleRoadSubscribe(segmentId: String) void
        #handleRoadUnsubscribe(segmentId: String) void
        #publishTrafficEvent(action: String, segment: String, kp: double) void
        #publishAlert(type: String, segment: String, kp: double) void
    }

    class GarbageTruck {
        -awsSubscriber: MessageSubscriber
        +collectWaste(binId: String) void
        #handleRoadSubscribe(segmentId: String) void
        #handleRoadUnsubscribe(segmentId: String) void
    }

    class SmartBinDevice {
        +TOPIC_BASE_AWS: String
        -alertThreshold: double
        -wasteType: String
        -location: RoadLocation
        -smartTrafficSubscriber: MessageSubscriber
        +updateFillLevel(level: double) void
        +updateLocation(newLoc: RoadLocation) void
        -publishPresence(action: String) void
        -setupSubscriptions() void
    }

    class Route {
        +segments: List~List~RoutePoint~~
        +addSegment(start: RoutePoint, end: RoutePoint) void
    }

    class RouteCollectionUseCase {
        -trafficService: TrafficService
        -navigationPort: VehicleNavigationPort
        -subscriber: MessageSubscriber
        +calculateAndSetRoute(truckId: String, bins: List~SmartBinDevice~) void
    }

    %% ==========================================
    %% Infrastructure Adapters
    %% ==========================================
    class AbstractMqttAdapter {
        <<abstract>>
        #brokerUrl: String
        #clientId: String
    }

    class AwsMqttAdapter {
        -connection: MqttClientConnection
    }

    class PahoMqttAdapter {
        -client: MqttClient
        +publish(msg: Message) void
        +subscribe(topic: String, callback: Consumer) void
    }

    %% ==========================================
    %% Relationships
    %% ==========================================

    Vehicle <|-- GarbageTruck : Extends
    SensorDevice <|-- SmartBinDevice : Extends
    
    MessagePublisher <|.. AbstractMqttAdapter : Implements
    MessageSubscriber <|.. AbstractMqttAdapter : Implements
    AbstractMqttAdapter <|-- AwsMqttAdapter : Extends
    AbstractMqttAdapter <|-- PahoMqttAdapter : Extends
    
    TrafficService <|.. RestTrafficAdapter : Implements
    VehicleNavigationPort <|.. RestVehicleNavigationAdapter : Implements

    App --> AwsMqttAdapter : Initializes
    App --> PahoMqttAdapter : Initializes
    App --> RouteCollectionUseCase : Orchestrates
    
    RouteCollectionUseCase --> TrafficService : Uses
    RouteCollectionUseCase --> VehicleNavigationPort : Uses
    
    GarbageTruck --> MessageSubscriber : Dynamic AWS/Traffic Sub
    SmartBinDevice --> MessageSubscriber : Dynamic Road Info Sub
